prevent odd-looking wrapping on menu subitems that have longer text than their parents

--- a/lai/css/gw_editorial/gwoverrides.scss
+++ b/lai/css/gw_editorial/gwoverrides.scss
@@ -90,6 +90,7 @@ ul.nice-menu .menu__link {
   -webkit-font-smoothing: subpixel-antialiased;
   font-size: 1rem;
   padding: 0 0.75rem;
+  white-space: nowrap;
   &:focus {
     outline-offset: -2px;
     & + ul {
